AX: WEB: VoiceOver for iOS does not read <iframe> elements during linear (swipe) navigation. https://bugs.webkit.org/show_bug.cgi?id=146861

Reviewed by Darin Adler.

Source/WebCore:

AttachmentViews exist only on WK1 so we need account for both platforms.

Test: platform/ios-simulator/accessibility/iframe-access.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityElementAtIndex:]):

LayoutTests:

* platform/ios-simulator/accessibility/iframe-access-expected.txt: Added.
* platform/ios-simulator/accessibility/iframe-access.html: Added.



Canonical link: https://commits.webkit.org/164964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186741 268f45cc-cd09-0410-ab3c-d52691b4dbfc